# typed-index-collections

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  MIGRATION.md  README.md  check.sh  deny.toml  doc.sh  fmt.sh  rustfmt.toml
.github/workflows/: build.yml  ci.yml  coverage.yml
src/: index.rs  iter.rs  lib.rs  macros.rs  range.rs  test.rs  test_util.rs  vec.rs
src/slice/: boxed.rs  concat.rs  join.rs  mod.rs  slice_index.rs
tests/: readme.rs  version.rs
tests/no-alloc/: Cargo.toml
tests/no-alloc-and-no-std/: Cargo.toml
tests/no-alloc-and-no-std/.cargo/: config.toml
tests/no-alloc-and-no-std/src/: main.rs
tests/no-alloc/src/: main.rs
tests/no-std/: Cargo.toml
tests/no-std/src/: main.rs
