[package]
name = "typed-index-collections"
version = "1.0.0"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
edition = "2018"
description = "Typed index version of Rust slice and Vec containers"
readme = "README.md"
repository = "https://github.com/zheland/typed-index-collections"
documentation = "https://docs.rs/typed-index-collections"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "no-std"]
keywords = ["collection", "index", "no_std", "slice", "vec"]

[dependencies.serde]
version = "1.0"
default-features = false
optional = true

[dev-dependencies]
derive_more = "0.99"
version-sync = "0.9"

[features]
default = ["alloc", "impl-index-from", "std"]
alloc = []
impl-index-from = []
serde-alloc = ["alloc", "serde/alloc"]
serde-std = ["std", "serde/std"]
std = []

[package.metadata.docs.rs]
all-features = true
