[package]
name = "typed-index-collections"
version = "3.3.0"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
edition = "2021"
rust-version = "1.85.0"
description = "Typed index version of Rust slice and Vec containers"
readme = "README.md"
repository = "https://github.com/zheland/typed-index-collections"
documentation = "https://docs.rs/typed-index-collections"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "no-std"]
keywords = ["collection", "index", "no_std", "slice", "vec"]

[features]
default = ["alloc", "std"]
alloc = ["serde?/alloc", "bincode?/alloc"]
std = ["alloc", "serde?/std", "bincode?/std"]
serde = ["dep:serde"]
bincode = ["dep:bincode"]
serde-alloc = ["alloc", "serde"] # Deprecated.
serde-std = ["std", "serde"] # Deprecated.

[dependencies.serde]
version = "1.0.219"
default-features = false
optional = true

[dependencies.bincode]
version = "2.0.1"
default-features = false
optional = true

[dev-dependencies]
derive_more.version = "2.0.1"
derive_more.features = ["from", "into"]
version-sync = "0.9.5"
serde_json = "1.0.140"
readme-sync = "0.3.0"

[badges.maintenance]
status = "passively-maintained"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms.level = "warn"
rust_2018_idioms.priority = -1
future_incompatible = "warn"
keyword_idents = "warn"
let_underscore = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
refining_impl_trait = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"
variant_size_differences = "warn"

[lints.clippy]
all.level = "warn"
all.priority = -1
pedantic.level = "warn"
pedantic.priority = -1
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
arithmetic_side_effects = "warn"
as_conversions = "warn"
branches_sharing_code = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
decimal_literal_representation = "warn"
default_trait_access = "warn"
empty_line_after_outer_attr = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
fallible_impl_from = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
future_not_send = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
missing_const_for_fn = "warn"
missing_inline_in_public_items = "warn"
modulo_arithmetic = "warn"
multiple_inherent_impl = "warn"
mut_mut = "warn"
nonstandard_macro_braces = "warn"
option_if_let_else = "warn"
panic = "warn"
print_stderr = "warn"
rc_buffer = "warn"
redundant_pub_crate = "warn"
std_instead_of_core = "warn"
string_lit_as_bytes = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
todo = "warn"
trivial_regex = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unwrap_used = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "warn"
module_name_repetitions = "allow" # items are re-exported to the crate root
