[package]
name = "no-alloc-and-std-test"
version = "0.1.0"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
edition = "2024"
publish = false

[features]
alloc = ["typed-index-collections/alloc"]
std = ["typed-index-collections/std"]
panic-handler = []
global-allocator = []
rust-eh-personality = []

[dependencies.typed-index-collections]
path = "../.."
default-features = false
features = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lints.rust]
rust_2018_idioms.level = "warn"
rust_2018_idioms.priority = -1
future_incompatible = "warn"
keyword_idents = "warn"
let_underscore = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
refining_impl_trait = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"
variant_size_differences = "warn"

[lints.clippy]
all.level = "warn"
all.priority = -1
pedantic.level = "warn"
pedantic.priority = -1
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
arithmetic_side_effects = "warn"
as_conversions = "warn"
branches_sharing_code = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
decimal_literal_representation = "warn"
default_trait_access = "warn"
empty_line_after_outer_attr = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
fallible_impl_from = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
future_not_send = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
missing_const_for_fn = "warn"
missing_inline_in_public_items = "warn"
modulo_arithmetic = "warn"
multiple_inherent_impl = "warn"
mut_mut = "warn"
nonstandard_macro_braces = "warn"
option_if_let_else = "warn"
panic = "warn"
print_stderr = "warn"
rc_buffer = "warn"
redundant_pub_crate = "warn"
std_instead_of_core = "warn"
string_lit_as_bytes = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
todo = "warn"
trivial_regex = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unwrap_used = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "warn"
module_name_repetitions = "allow" # items are re-exported to the crate root
