[package]
name = "no-std-test"
version = "0.1.0"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
edition = "2018"
publish = false

[dependencies.typed-index-collections]
path = "../.."
default-features = false
features = ["alloc"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
